--- a/backend/package.json
+++ b/backend/package.json
@@ -9,13 +9,13 @@
         "migrate": "psql $DATABASE_URL -f ../database/schema.sql"
     },
     "dependencies": {
+        "@supabase/supabase-js": "^2.97.0",
         "bcryptjs": "^2.4.3",
         "cors": "^2.8.5",
         "dotenv": "^16.4.5",
         "express": "^4.18.3",
         "express-validator": "^7.1.0",
         "helmet": "^7.1.0",
-        "jsonwebtoken": "^9.0.2",
         "pg": "^8.11.5"
     },
     "devDependencies": {
